--- a/Aula-dez-04/projeto/package.json
+++ b/Aula-dez-04/projeto/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.1",
+    "react-image-gallery": "^1.0.8",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
